# CuprumTurbo-Scheduler

./: LICENSE  README.md  readme.md
.github/ISSUE_TEMPLATE/: bug_report.md
cuprumturbo_v10_source/: libcuprum.sh  main.c
cuprumturbo_v12_source/: CMakeLists.txt  libcu.c  libcu.h  main.c
cuprumturbo_v9_sourcecode/: libcuprum.sh  main.c
custom_config/: helper.md  readme.md  sample.json
custom_config/configs/: _config_select.sh  dimensity1000.json  dimensity1100.json  dimensity700.json  dimensity7200.json  dimensity8100.json  dimensity820.json  dimensity8200.json  dimensity900.json  dimensity9000.json  dimensity9200.json  exynos1080.json  exynos2100.json  exynos2200.json  exynos9820.json  exynos9825.json  exynos990.json  get_target_config.sh  helio_g80.json  helio_g90.json  helio_g99.json  helio_p35.json  helio_p60.json  kirin650.json  kirin710.json  kirin950.json  kirin960.json  kirin970.json  readme.md  sc9863a.json  sdm4gen1.json  sdm4gen2.json  sdm625.json  sdm650.json  sdm652.json  sdm660.json  sdm665.json  sdm675.json  sdm680.json  sdm7+gen2.json  (+19 more)
docs/: config_dev_helper.md  privacy_agreement.md
magisk/: CAE_source.c  CuDaemon  cuprum_source.sh  customize.sh  frame_analysis.c  libcuprum.sh  module.prop  service.sh  taskclassify.sh  uninstall.sh
magisk/configs/: _config_select.sh  dimensity1000.json  dimensity1100.json  (+65 more)
source/: CMakeLists.txt  cJSON.c  cu_util.c  cu_util.h  main.c
source/src/: cu_util.c  cu_util.h  main.c
template/: CuDaemon  readme.md  readme.txt  start_daemon.sh  template.ccf
v13_custom_config/: readme.md  sample.json
(+209 files in other folders)
